--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "",
   "scripts": {
     "dev": "RUST_LOG=info umi dev",
-    "build": "RUST_LOG=info COMPRESS=none umi build",
+    "build": "umi build",
     "preview": "umi preview",
     "postinstall": "umi setup",
     "setup": "umi setup",
@@ -16,5 +16,10 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "typescript": "^5.0.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@utoo/pack": "1.1.21"
+    }
   }
 }
