--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "",
   "scripts": {
     "dev": "umi dev",
-    "build": "umi build",
+    "build": "COMPRESS=none umi build",
     "preview": "umi preview",
     "postinstall": "umi setup",
     "setup": "umi setup",
@@ -21,5 +21,6 @@
     "overrides": {
       "@utoo/pack": "1.1.22"
     }
-  }
+  },
+  "repository": "git@github.com:fireairforce/utoopack-invalid-filename-repo.git"
 }
