--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "umi": "^4.6.22"
+    "umi": "^4.6.24"
   },
   "devDependencies": {
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.3"
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "overrides": {
-      "@utoo/pack": "1.1.22"
+      "@utoo/pack": "1.2.0-alpha.1"
     }
   },
   "repository": "git@github.com:fireairforce/utoopack-invalid-filename-repo.git"
